===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 4.0.3, 2013/
==========================
o improve inline performance

version 4.0.2, 2013/07/09
==========================
o use requestAnimationFrame if enable.
o new css property border-style, border-color supported.
! rename style property "border" to "border-width".
! rename addRule to setStyle.
! remove class Selectors.

version 4.0.1, 2013/05/01
==========================
o new class Slector, Selectors(selector.js, selectors.js) to handle more complex selector.
o cache style object for each tag, to increase performance(tag.js).
o new engine method addRule, addRules, getRule are now exported(native access to Style object is disabled).
* remove useless line that is created when inline-generator is broken by block tag without any text tokens.

version 4.0.0, 2013/04/27
==========================
o first release